// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Primitive Form renders correctly 1`] = `
.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c3.rovna-ui-input {
  font-size: 14px;
  line-height: 24px;
  text-overflow: ellipsis;
}

.c3.rovna-ui-input-affix-wrapper > input.rovna-ui-input {
  text-overflow: ellipsis;
  font-size: 14px;
  line-height: 24px;
}

.c3.rovna-ui-input-affix-wrapper .rovna-ui-input-suffix {
  color: #686E78FF;
}

.c3.rovna-ui-input-affix-wrapper .rovna-ui-input-prefix {
  margin-inline-end: 8px;
  color: #686E78FF;
}

.c3.rovna-ui-input-affix-wrapper .rovna-ui-input-clear-icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3.rovna-ui-input-affix-wrapper .anticon {
  font-size: 16px;
}

.c3.rovna-ui-input,
.c3.rovna-ui-input-affix-wrapper {
  height: 32px;
}

.c7 {
  margin: 0;
  padding: 0;
  border: none;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 4px;
  outline-offset: 2px;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  -webkit-transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  -webkit-transition-property: background,color,border;
  transition-property: background,color,border;
  border-radius: 8px;
  padding: 6px 16px;
  color: #FFFFFFFF;
  background: #0062C9FF;
}

.c7:focus-visible {
  outline: #004A97FF solid 2px;
}

.c7:hover:not(:disabled) {
  cursor: pointer;
  background: #004A97FF;
}

.c7:active:not(:disabled) {
  background: #004A97FF;
}

.c7:disabled {
  cursor: not-allowed;
  color: #686E78FF;
  background-color: #1D24360D;
}

.c7 .anticon,
.c7 .rovna-ui-icon-root {
  font-size: 16px;
}

.c7:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-large):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(10px - 1px) 20px;
}

.c7:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-medium):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(6px - 1px) 16px;
}

.c7:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-small):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(2px - 1px) 16px;
}

.c7:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-icon-only ) {
  padding: calc(12px - 1px);
}

.c7:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-icon-only ) {
  padding: calc(8px - 1px);
}

.c7:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-icon-only ) {
  padding: calc(4px - 1px);
}

.c7:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(10px - 1px) 20px calc(10px - 1px) 16px;
}

.c7:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(6px - 1px) 16px calc(6px - 1px) 12px;
}

.c7:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(2px - 1px) 12px calc(2px - 1px) 8px;
}

.c1 .rovna-ui-checkbox-group,
.c1 .rovna-ui-toggle-group,
.c1 .rovna-ui-radio-group {
  margin-top: 4px;
}

.c1:where(.rovna-ui-form-field-root-has-error) .rovna-ui-form-message-root {
  color: #B4384DFF;
}

.c1:where(.rovna-ui-form-field-root-has-error) .rovna-ui-checkbox-inner,
.c1:where(.rovna-ui-form-field-root-has-error) .rovna-ui-picker,
.c1:where(.rovna-ui-form-field-root-has-error) .rovna-ui-select-selector {
  border-color: #B4384DFF;
}

.c1:where(.rovna-ui-form-field-root-has-warning) .rovna-ui-form-message-root {
  color: #925800FF;
}

.c1:where(.rovna-ui-form-field-root-has-success) .rovna-ui-form-message-root {
  color: #34744FFF;
}

.c6 {
  font-family: Museo Sans Cyrl,sans-serif;
  color: #646A74FF;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 1.333;
  margin-top: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  line-height: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  margin-bottom: 4px;
}

.c2 .anticon {
  font-size: 16px;
  color: #686E78FF;
}

.c4 {
  color: #B4384DFF;
  font-family: Museo Sans Cyrl;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  margin-top: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 16px;
}

<form
  className="c0 rovna-ui-form-root"
  data-testid="rovna-ui-form"
>
  <div
    className="c1 rovna-ui-form-field-root"
  >
    <label
      className="c2 rovna-ui-form-label-root"
    >
      Подрядчик
    </label>
    <input
      className="rovna-ui-input css-dev-only-do-not-override-u64svk c3 css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onCompositionEnd={[Function]}
      onCompositionStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      style={{}}
      title=""
      type="text"
      value=""
    />
    <div
      className="c4 rovna-ui-form-message-root"
      role="alert"
    >
      <span
        className="c5 rovna-ui-icon-root anticon"
        data-testid="rovna-ui-error-icon"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12ZM11 16C11 15.4477 11.4477 15 12 15C12.5523 15 13 15.4477 13 16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16ZM12 7C11.4477 7 11 7.44772 11 8V12C11 12.5523 11.4477 13 12 13C12.5523 13 13 12.5523 13 12V8C13 7.44772 12.5523 7 12 7Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </span>
      Сообщение об ошибке
    </div>
    <div
      className="c6 rovna-ui-form-help-root"
    >
      Сообщение-подсказка
    </div>
  </div>
  <div
    className="c1 rovna-ui-form-field-root"
  >
    <label
      className="c2 rovna-ui-form-label-root"
    >
      Поставщик
    </label>
    <input
      className="rovna-ui-input css-dev-only-do-not-override-u64svk c3 css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onCompositionEnd={[Function]}
      onCompositionStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      style={{}}
      title=""
      type="text"
      value=""
    />
    <div
      className="c4 rovna-ui-form-message-root"
      role="alert"
    >
      <span
        className="c5 rovna-ui-icon-root anticon"
        data-testid="rovna-ui-error-icon"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12ZM11 16C11 15.4477 11.4477 15 12 15C12.5523 15 13 15.4477 13 16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16ZM12 7C11.4477 7 11 7.44772 11 8V12C11 12.5523 11.4477 13 12 13C12.5523 13 13 12.5523 13 12V8C13 7.44772 12.5523 7 12 7Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </span>
      Сообщение об ошибке
    </div>
    <div
      className="c6 rovna-ui-form-help-root"
    >
      Сообщение-подсказка
    </div>
  </div>
  <div
    className="c1 rovna-ui-form-field-root"
  >
    <button
      className="c7 rovna-ui-button rovna-ui-button-variant-primary rovna-ui-button-preset-default rovna-ui-button-size-medium"
      data-testid="rovna-ui-button"
      disabled={false}
      onClick={[Function]}
    >
      Далее
    </button>
  </div>
</form>
`;

exports[`Primitive Form with custom gap renders correctly 1`] = `
.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 16px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c3.rovna-ui-input {
  font-size: 14px;
  line-height: 24px;
  text-overflow: ellipsis;
}

.c3.rovna-ui-input-affix-wrapper > input.rovna-ui-input {
  text-overflow: ellipsis;
  font-size: 14px;
  line-height: 24px;
}

.c3.rovna-ui-input-affix-wrapper .rovna-ui-input-suffix {
  color: #686E78FF;
}

.c3.rovna-ui-input-affix-wrapper .rovna-ui-input-prefix {
  margin-inline-end: 8px;
  color: #686E78FF;
}

.c3.rovna-ui-input-affix-wrapper .rovna-ui-input-clear-icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3.rovna-ui-input-affix-wrapper .anticon {
  font-size: 16px;
}

.c3.rovna-ui-input,
.c3.rovna-ui-input-affix-wrapper {
  height: 32px;
}

.c7 {
  margin: 0;
  padding: 0;
  border: none;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 4px;
  outline-offset: 2px;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  -webkit-transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  transition: 0.2s cubic-bezier(0.645,0.045,0.355,1);
  -webkit-transition-property: background,color,border;
  transition-property: background,color,border;
  border-radius: 8px;
  padding: 6px 16px;
  color: #FFFFFFFF;
  background: #0062C9FF;
}

.c7:focus-visible {
  outline: #004A97FF solid 2px;
}

.c7:hover:not(:disabled) {
  cursor: pointer;
  background: #004A97FF;
}

.c7:active:not(:disabled) {
  background: #004A97FF;
}

.c7:disabled {
  cursor: not-allowed;
  color: #686E78FF;
  background-color: #1D24360D;
}

.c7 .anticon,
.c7 .rovna-ui-icon-root {
  font-size: 16px;
}

.c7:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-large):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(10px - 1px) 20px;
}

.c7:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-medium):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(6px - 1px) 16px;
}

.c7:where(.rovna-ui-button-variant-secondary.rovna-ui-button-size-small):not( .rovna-ui-button-has-before, .rovna-ui-button-has-after ) {
  padding: calc(2px - 1px) 16px;
}

.c7:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-icon-only ) {
  padding: calc(12px - 1px);
}

.c7:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-icon-only ) {
  padding: calc(8px - 1px);
}

.c7:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-icon-only ) {
  padding: calc(4px - 1px);
}

.c7:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-large.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(10px - 1px) 20px calc(10px - 1px) 16px;
}

.c7:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-medium.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(6px - 1px) 16px calc(6px - 1px) 12px;
}

.c7:where( .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-has-before, .rovna-ui-button-variant-secondary.rovna-ui-button-size-small.rovna-ui-button-has-after ):not(.rovna-ui-button-icon-only) {
  padding: calc(2px - 1px) 12px calc(2px - 1px) 8px;
}

.c1 .rovna-ui-checkbox-group,
.c1 .rovna-ui-toggle-group,
.c1 .rovna-ui-radio-group {
  margin-top: 4px;
}

.c1:where(.rovna-ui-form-field-root-has-error) .rovna-ui-form-message-root {
  color: #B4384DFF;
}

.c1:where(.rovna-ui-form-field-root-has-error) .rovna-ui-checkbox-inner,
.c1:where(.rovna-ui-form-field-root-has-error) .rovna-ui-picker,
.c1:where(.rovna-ui-form-field-root-has-error) .rovna-ui-select-selector {
  border-color: #B4384DFF;
}

.c1:where(.rovna-ui-form-field-root-has-warning) .rovna-ui-form-message-root {
  color: #925800FF;
}

.c1:where(.rovna-ui-form-field-root-has-success) .rovna-ui-form-message-root {
  color: #34744FFF;
}

.c6 {
  font-family: Museo Sans Cyrl,sans-serif;
  color: #646A74FF;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 1.333;
  margin-top: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 12px;
  font-style: normal;
  line-height: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  margin-bottom: 4px;
}

.c2 .anticon {
  font-size: 16px;
  color: #686E78FF;
}

.c4 {
  color: #B4384DFF;
  font-family: Museo Sans Cyrl;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  margin-top: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 32px;
}

<form
  className="c0 rovna-ui-form-root"
  data-testid="rovna-ui-form"
>
  <div
    className="c1 rovna-ui-form-field-root"
  >
    <label
      className="c2 rovna-ui-form-label-root"
    >
      Подрядчик
    </label>
    <input
      className="rovna-ui-input css-dev-only-do-not-override-u64svk c3 css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onCompositionEnd={[Function]}
      onCompositionStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      style={{}}
      title=""
      type="text"
      value=""
    />
    <div
      className="c4 rovna-ui-form-message-root"
      role="alert"
    >
      <span
        className="c5 rovna-ui-icon-root anticon"
        data-testid="rovna-ui-error-icon"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12ZM11 16C11 15.4477 11.4477 15 12 15C12.5523 15 13 15.4477 13 16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16ZM12 7C11.4477 7 11 7.44772 11 8V12C11 12.5523 11.4477 13 12 13C12.5523 13 13 12.5523 13 12V8C13 7.44772 12.5523 7 12 7Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </span>
      Сообщение об ошибке
    </div>
    <div
      className="c6 rovna-ui-form-help-root"
    >
      Сообщение-подсказка
    </div>
  </div>
  <div
    className="c1 rovna-ui-form-field-root"
  >
    <label
      className="c2 rovna-ui-form-label-root"
    >
      Поставщик
    </label>
    <input
      className="rovna-ui-input css-dev-only-do-not-override-u64svk c3 css-dev-only-do-not-override-u64svk"
      data-testid="rovna-ui-input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onCompositionEnd={[Function]}
      onCompositionStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      style={{}}
      title=""
      type="text"
      value=""
    />
    <div
      className="c4 rovna-ui-form-message-root"
      role="alert"
    >
      <span
        className="c5 rovna-ui-icon-root anticon"
        data-testid="rovna-ui-error-icon"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12ZM11 16C11 15.4477 11.4477 15 12 15C12.5523 15 13 15.4477 13 16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16ZM12 7C11.4477 7 11 7.44772 11 8V12C11 12.5523 11.4477 13 12 13C12.5523 13 13 12.5523 13 12V8C13 7.44772 12.5523 7 12 7Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </span>
      Сообщение об ошибке
    </div>
    <div
      className="c6 rovna-ui-form-help-root"
    >
      Сообщение-подсказка
    </div>
  </div>
  <div
    className="c1 rovna-ui-form-field-root"
  >
    <button
      className="c7 rovna-ui-button rovna-ui-button-variant-primary rovna-ui-button-preset-default rovna-ui-button-size-medium"
      data-testid="rovna-ui-button"
      disabled={false}
      onClick={[Function]}
    >
      Далее
    </button>
  </div>
</form>
`;
